k8s/car-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-service
  labels:
    app: car-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-service
  template:
    metadata:
      labels:
        app: car-service
    spec:
      containers:
        - name: car-service
          image: car-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
