k8s/chat-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: chat-service
          ports:
            - containerPort: 8087
