k8s/feedback-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-service
  labels:
    app: feedback-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: feedback-service
    spec:
      containers:
        - name: feedback-service
          image: feedback-service
          ports:
            - containerPort: 8086
