k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    io.kompose.service: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  template:
    metadata:
      labels:
        io.kompose.service: user-service
        io.kompose.network/microservice-net: "true"
    spec:
      containers:
        - name: user-service
          image: user-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
      restartPolicy: Always
