k8s/booking-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  type: ClusterIP
  selector:
    app: booking-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
