k8s/car-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-service
  labels:
    app: car-service
spec:
  type: ClusterIP
  selector:
    app: car-service
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: http
