k8s/feedback-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-service
  labels:
    app: feedback-service
spec:
  type: ClusterIP
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
      name: http
  selector:
    app: feedback-service
