k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
      protocol: TCP
