k8s/user-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-postgres
  labels:
    io.kompose.service: user-postgres
spec:
  selector:
    io.kompose.service: user-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
